# cwe_checker

./: .gitignore  CHANGES.md  Dockerfile  Makefile  README.md  flake.nix
.github/workflows/: acceptance-tests.yml  codestyle_checks.yml  unit-tests.yml
src/caller/: Cargo.toml
src/caller/src/: cfg_stats.rs  main.rs
src/cwe_checker_lib/: Cargo.toml
src/cwe_checker_lib/benches/: benchmarks.rs
src/cwe_checker_lib/src/: checkers.rs  lib.rs
src/cwe_checker_lib/src/abstract_domain/: bricks.rs  character_inclusion.rs  domain_map.rs  mem_region.rs  mod.rs
src/cwe_checker_lib/src/analysis/: fixpoint.rs  forward_interprocedural_fixpoint.rs  graph.rs  mod.rs
src/cwe_checker_lib/src/checkers/: cwe_134.rs  cwe_190.rs  cwe_215.rs  cwe_243.rs  cwe_252.rs  cwe_332.rs  cwe_337.rs  cwe_367.rs  cwe_426.rs  cwe_467.rs  cwe_476.rs  cwe_560.rs  cwe_676.rs  cwe_78.rs  cwe_782.rs  cwe_789.rs
src/cwe_checker_lib/src/ghidra_pcode/: datatype_properties.rs  memory_block.rs  mod.rs  pcode_opcode.rs  program.rs  register_properties.rs  term.rs
src/cwe_checker_lib/src/intermediate_representation/: blk.rs  def.rs  expression.rs  jmp.rs  mod.rs  program.rs  project.rs  sub.rs  term.rs  (+1 more)
src/ghidra/p_code_extractor/: Block.java  CallingConvention.java  DatatypeProperties.java  ExternFunction.java  Function.java  Instruction.java  MemoryBlk.java  PcodeExtractor.java  PcodeOp.java  PcodeProject.java  Program.java  RegisterProperties.java  Term.java  Varnode.java
src/installer/: Cargo.toml
src/installer/src/: main.rs
test/: Cargo.toml
test/lkm_samples/: build.sh
test/src/: lib.rs
(+82 files in other folders)
