[package]
name = "cwe_checker"
version = "0.9.0"
authors = ["Fraunhofer FKIE <contact@cwe-checker.io>"]
edition = "2021"
rust-version = "1.81"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
cwe_checker_lib = { path = "../cwe_checker_lib" }
serde_json = "1.0"
directories = "5.0.1"
anyhow = "1.0"
